<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <LinearLayout 
    	android:id="@+id/linearLayout1" 
    	android:gravity="center"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content">
        <TextView 
        	android:id="@+id/textView1" 
        	android:text="測定結果" 
        	android:gravity="center"
        	android:textSize="30sp"
        	android:layout_height="wrap_content" 
        	android:layout_width="wrap_content" />
    </LinearLayout>
    <TableLayout 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:id="@+id/tableLayout1">
        <TableRow 
        	android:id="@+id/tableRow0" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content">
            <TextView 
            	android:text="測定日付" 
            	android:textStyle="bold"
            	android:textSize="20sp"
            	android:id="@+id/textView1" 
            	android:layout_marginRight="10dip"
            	android:layout_width="wrap_content" 
            	android:layout_height="wrap_content" />
		    <TextView 
		    	android:text="2011年5月28日4時" 
            	android:textSize="20sp"
		    	android:id="@+id/textView2" 
		    	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content"></TextView>
        </TableRow>
        <TableRow 
        	android:id="@+id/tableRow1" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content">
            <TextView 
            	android:text="@string/str_param1" 
            	android:textStyle="bold"
            	android:textSize="20sp"
            	android:layout_marginRight="10dip"
            	android:layout_width="wrap_content" 
            	android:layout_height="wrap_content" />
		    <TextView 
		    	android:text="" 
            	android:textSize="20sp"
		    	android:id="@+id/param1" 
		    	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content"></TextView>
        </TableRow>
        <TableRow 
        	android:id="@+id/tableRow2" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content">
            <TextView 
            	android:text="@string/str_param2" 
            	android:textStyle="bold"
            	android:textSize="20sp"
            	android:layout_marginRight="10dip"
            	android:layout_width="wrap_content" 
            	android:layout_height="wrap_content" />
		    <TextView 
		    	android:text="" 
            	android:textSize="20sp"
		    	android:id="@+id/param2" 
		    	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content"></TextView>
        </TableRow>
        <TableRow 
        	android:id="@+id/tableRow3" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content">
            <TextView 
            	android:text="@string/str_param3" 
            	android:textStyle="bold"
            	android:textSize="20sp"
            	android:layout_marginRight="10dip"
            	android:layout_width="wrap_content" 
            	android:layout_height="wrap_content" />
		    <TextView 
		    	android:text="" 
            	android:textSize="20sp"
		    	android:id="@+id/param3" 
		    	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content"></TextView>
        </TableRow>
        <TableRow 
        	android:id="@+id/tableRow4" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content">
            <TextView 
            	android:text="@string/str_param4" 
            	android:textStyle="bold"
            	android:textSize="20sp"
            	android:layout_marginRight="10dip"
            	android:layout_width="wrap_content" 
            	android:layout_height="wrap_content" />
		    <TextView 
		    	android:text="" 
            	android:textSize="20sp"
		    	android:id="@+id/param4" 
		    	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content"></TextView>
        </TableRow>
        <TableRow 
        	android:id="@+id/tableRow5" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content">
            <TextView 
            	android:text="@string/str_param5" 
            	android:textStyle="bold"
            	android:textSize="20sp"
            	android:layout_marginRight="10dip"
            	android:layout_width="wrap_content" 
            	android:layout_height="wrap_content" />
		    <TextView 
		    	android:text="" 
            	android:textSize="20sp"
		    	android:id="@+id/param5" 
		    	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content"></TextView>
        </TableRow>
        <TableRow 
        	android:id="@+id/tableRow6" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content">
            <TextView 
            	android:text="@string/str_param6" 
            	android:textStyle="bold"
            	android:textSize="20sp"
            	android:layout_marginRight="10dip"
            	android:layout_width="wrap_content" 
            	android:layout_height="wrap_content" />
		    <TextView 
		    	android:text="" 
            	android:textSize="20sp"
		    	android:id="@+id/param6" 
		    	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content"></TextView>
        </TableRow>
        <TableRow 
        	android:id="@+id/tableRow7" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content">
            <TextView 
            	android:text="@string/str_param7" 
            	android:textStyle="bold"
            	android:textSize="20sp"
            	android:layout_marginRight="10dip"
            	android:layout_width="wrap_content" 
            	android:layout_height="wrap_content" />
		    <TextView 
		    	android:text="" 
            	android:textSize="20sp"
		    	android:id="@+id/param7" 
		    	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content"></TextView>
        </TableRow>
        <TableRow 
        	android:id="@+id/tableRow8" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content">
            <TextView 
            	android:text="@string/str_param8" 
            	android:textStyle="bold"
            	android:textSize="20sp"
            	android:layout_marginRight="10dip"
            	android:layout_width="wrap_content" 
            	android:layout_height="wrap_content" />
		    <TextView 
		    	android:text="" 
            	android:textSize="20sp"
		    	android:id="@+id/param8" 
		    	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content"></TextView>
        </TableRow>
    </TableLayout>
    <EditText 
    	android:text=""
    	android:gravity="top" 
    	android:id="@+id/editText1" 
    	android:layout_weight="1"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"></EditText>
    <Button 
    	android:text="登録" 
    	android:id="@+id/button1" 
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"></Button>
    	
</LinearLayout>
